i added border background color and links

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,11 +6,25 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Portfolio2-Jacob Green</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link type="text/css" rel="stylesheet" href="css/bootstrap-theme.css">
+        <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
+        <link type="text/css" rel="stylesheet" href="css/custom-style.css">
+        
     </head>
     <body>
-        <div>TODO write content</div>
+        <div class="container">
+            <p>container</p>
+            <div class="row">
+                <p>row</p>
+                <div class="col-x2-10">
+                    <div class="x2-2">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
