--- a/public_html/index.html
+++ b/public_html/index.html
@@ -19,12 +19,13 @@ and open the template in the editor.
             <p>container</p>
             <div class="row">
                 <p>row</p>
-                <div class="col-x2-10">
-                    <div class="x2-2">
-                        
+                <div class="col-xs-10">
+                <p>col-xs-10</p>
+                <div class="col-xs-2">
+                <p>col-xs-2</p>
                     </div>
-                </div>
+                </div>  
             </div>
         </div>
-    </body>
+   </body>
 </html>
