--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,26 +6,24 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Portfolio2-Jacob Green</title>
+        <title>Jacob Green-Portfolio2</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="css/bootstrap-theme.css">
         <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
         <link type="text/css" rel="stylesheet" href="css/custom-style.css">
-        
     </head>
     <body>
-        <div class="container">
+      <div class="container">
             <p>container</p>
             <div class="row">
                 <p>row</p>
-                <div class="col-xs-10">
-                <p>col-xs-10</p>
-                <div class="col-xs-2">
-                <p>col-xs-2</p>
-                    </div>
-                </div>  
+                <div class="col-xs-1"></div>
+                <div class="col-xs-11"></div>
             </div>
         </div>
-   </body>
+    </body>
 </html>
+   
+    
+   
