--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,8 +15,11 @@ and open the template in the editor.
     </head>
     <body>
       <div class="container">
-            <p>container</p>
-            <div class="row">
+          <p>container</p>
+                <a href="index.html">Home</a>
+          <a href="projects.html">Projects</a>
+          <a href="technology.html">Technologies</a>
+            <div class="row">      
                 <p>row</p>
                 <div class="col-xs-1"></div>
                 <div class="col-xs-11"></div>
