--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -11,6 +11,16 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+         <div class="container">
+            <p>container</p>
+            <div class="row">
+                <p>row</p>
+                <div class="col-xs-3"></div>
+                <div class="col-xs9"></div>
+                <div class="row">
+                    <p>row</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
